<?xml version="1.0"?>
<package format="2">
  <name>sick_microscan3_ros_driver</name>
  <version>0.0.1</version>
  <description>The sick_microscan3_ros_driver package</description>

  <maintainer email="puck@fzi.de">Lennart Puck</maintainer>

  <license>ALv2</license>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
